src/objects/FSD__c.object
<CustomObject>
    <fields>
        <fullName>FSD_Accepted_Date_Store__c</fullName>
        <label>FSD Accepted Date Store</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSD_Accepted_Date__c</fullName>
        <label>FSD Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSD_Final_Findings_Reported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSD Final Findings Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSD_Findings_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSD Findings Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSD_Notes__c</fullName>
        <label>FSD Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSD_Reason__c</fullName>
        <label>FSD Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Roof Leak</fullName>
                </value>
                <value>
                    <fullName>Quality Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Underproduction</fullName>
                </value>
                <value>
                    <fullName>System Failure</fullName>
                </value>
                <value>
                    <fullName>Meter Issue</fullName>
                </value>
                <value>
                    <fullName>System Activation</fullName>
                </value>
                <value>
                    <fullName>System Maintenance</fullName>
                </value>
                <value>
                    <fullName>System Inspection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSD_Received__c</fullName>
        <label>FSD Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSD_Schedule_Date__c</fullName>
        <label>FSD Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FSD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>FSDs</relationshipLabel>
        <relationshipName>FSDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sent_Back_to_Leasing_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Back to Leasing Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Update_Reported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status Update Reported</label>
        <type>Checkbox</type>
    </fields>
    <label>FSD</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>FSD_Accepted_Date__c</columns>
        <columns>FSD_Accepted_Date_Store__c</columns>
        <columns>FSD_Final_Findings_Reported__c</columns>
        <columns>FSD_Findings_Approved__c</columns>
        <columns>FSD_Notes__c</columns>
        <columns>FSD_Reason__c</columns>
        <columns>FSD_Received__c</columns>
        <columns>FSD_Schedule_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FSD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>